Realizando requisitos até o 5

--- a/index.html
+++ b/index.html
@@ -9,11 +9,50 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+
     <div id="color-palette">
         <div class="color black"></div>
         <div class="color vivid-blue"></div>
         <div class="color blue-green"></div>
         <div class="color fiery-rose"></div>
+    </div>
+
+    <div id="pixel-board">
+        <div id="linha1">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div> 
+        </div>
+        <div id="linha2">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div> 
+        </div>
+        <div id="linha3">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div> 
+        </div>
+        <div id="linha4">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div> 
+        </div>
+        <div id="linha5">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div> 
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
