--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Projeto Pixels Art - Paleta de Cores</title>
 </head>
-<body>
+<body onload="carregamentoInicial()">
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="color-palette">
-        <div class="color black"></div>
+        <div id="cor-preta" class="color black"></div>
         <div class="color vivid-blue"></div>
         <div class="color blue-green"></div>
         <div class="color fiery-rose"></div>
