--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div class="color fiery-rose"></div>
     </div>
 
+    <button id="clear-board">Limpar</button>
+
     <div id="pixel-board">
         <div id="linha1">
             <div class="pixel"></div>
