--- a/index.html
+++ b/index.html
@@ -16,39 +16,43 @@
         <div class="color blue-green"></div>
         <div class="color fiery-rose"></div>
     </div>
-
+    <div id="input-e-botao">
+        <input id="board-size" type="number" min="1">
+        <button id="generate-board">VQV</button>
+    </div>
+    
     <button id="clear-board">Limpar</button>
 
     <div id="pixel-board">
-        <div id="linha1">
+        <div class="linha">
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div> 
         </div>
-        <div id="linha2">
+        <div class="linha">
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div> 
         </div>
-        <div id="linha3">
+        <div class="linha">
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div> 
         </div>
-        <div id="linha4">
+        <div class="linha">
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div> 
         </div>
-        <div id="linha5">
+        <div class="linha">
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
