--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <div id="color-palette">
         <div id="cor-preta" class="color black"></div>
-        <div class="color vivid-blue"></div>
-        <div class="color blue-green"></div>
-        <div class="color fiery-rose"></div>
+        <div class="color random"></div>
+        <div class="color random"></div>
+        <div class="color random"></div>
     </div>
     <div id="input-e-botao">
         <input id="board-size" type="number" min="1">
